ENHANCE: fix vertical height on mobile

--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 80vh;
+  height: 90vh;
   width: 100%;
 }
 .ctd-soon {
